most styled password Resest email

--- a/server/utils/email/templates/resetPassword.handlebars
+++ b/server/utils/email/templates/resetPassword.handlebars
@@ -5,90 +5,129 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <style>
-        body{
-        display: flex;
-        min-height: 100vh;
-        justify-content: center;
-        align-items: center;
-        }
+      table{
+	margin-left: auto;
+	margin-right: auto;
+	transform: tranlateY(50%);
+	max-width: 240px;
+	empty-cells: show;
+    }
 
-        table{
-
-        max-width: 240px;
-        empty-cells: show;
-
-        }
-        th{
-
-         padding: 7px 0px;
-
-        }
-        thead {
-
-        border-bottom: 2px solid black;
-
-        }
-        #icon{
-
+    #icon{
         width: 5%;
         padding-right: 5px;
+    }
 
-        }
-        #siteName{
-
+    #siteName{
         text-align: left; 
         padding-left: 5px;
         margin: auto;
-        border-left: 2px solid black; 
+        border-left: 1px solid #9CA3AF; 
 
-        }
+    }
 
-        #bodySpacer{
+    #bodySpacer{
+        height: 25px;
+    }
 
-        height: 15px;
+    #headSpacer{
+        padding: 2px;
+    }
 
-        }
-        #headSpacer{
+    #lineSpacer{
+        padding: 2px;
+    }
 
-            height: 5px;
+    #resetButton{
+        display: block;
+        min-width: 100%;
+        color: white;
+        font-size: 1.25rem;
+        text-decoration: none;
+        margin: auto;
+    }
 
-        }
+    #linkCell{
+        border-radius: 5px;
+        background: rgb(32, 178, 170);
+        text-align: center;
+    }
+
+    a {
+        text-decoration: none;
+    }
    </style>
 </head>
 <body>
 
-    <table>
-        {{#if emailSubject}}
-        <tr>
-            <td>
-                Subject:
-            </td>
-            <td>{{emailSubject}}</td>
-        </tr>
-        {{/if}}
-        <tr>
-            <td>{{emailMsg}}</td>
-            <td></td>
-        </tr>
-        <tr>
-
-            <td id="footer">{{emailName}}</td>
-            <td></td>
-        </tr>
-        <tr>
-
-            <td>{{emailAddress}}</td>
-            <td></td>
-        </tr>
-
-        {{#if emailPhone}}
-        <tr>
-
-            <td>{{emailPhone}}</td>
-            <td></td>
-        </tr>
-        {{/if}}
-    </table>
+ 
+	<table>
+		<thead>
+					
+			<tr>
+				<th colspan="2" id="headSpacer">
+					
+				</th>
+			</tr>
+					
+			<tr>
+				<th colspan="2" id="headSpacer">
+					
+				</th>
+			</tr>
+			<tr>
+				<th align="left" id="icon">
+					Icon
+				</th>
+				<th id="siteName">MikeSpinks.dev</th>
+			</tr>
+			
+			<tr>
+				<th colspan="2" id="headSpacer">
+					
+				</th>
+			</tr>
+		</thead>
+		
+		
+		<tbody>
+			<tr>
+				<td colspan="2" style="border-top: 1px solid #9CA3AF"></td>
+			</tr>
+			<tr id="bodySpacer">
+				<td colspan="2"></td>
+			</tr>
+			<tr>
+				<td colspan="2">Hi emailAddress</td>
+			</tr>
+			<tr>
+				<td colspan="2" id="lineSpacer"></td>
+			</tr>
+			<tr>
+				<td colspan="2">We Got A Request to change your password at mikespinks.dev</td>
+			</tr>
+				<tr>
+				<td colspan="2" id="lineSpacer"></td>
+			</tr>
+			
+			<tr>
+				<td colspan="2" id="linkCell">
+					<a href="" id="resetButton" >
+						Reset Password
+					</a>
+				</td>
+			</tr>
+				<tr>
+				<td colspan="2" id="lineSpacer"></td>
+			</tr>
+			
+			<tr>
+				<td colspan="2">
+					If you didn't request a password reset, please ignore this message. If you feel someone else made the request. Please <a href="#">Report Activity</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 
 </body>
 </html>
