added username to forgotPassword template

--- a/server/utils/email/templates/resetPassword.handlebars
+++ b/server/utils/email/templates/resetPassword.handlebars
@@ -98,7 +98,7 @@
 				<td colspan="2"></td>
 			</tr>
 			<tr>
-				<td colspan="2">Hi emailAddress</td>
+				<td colspan="2">Hi {{emailUsername}}</td>
 			</tr>
 			<tr>
 				<td colspan="2" id="lineSpacer"></td>
@@ -112,7 +112,7 @@
 			
 			<tr>
 				<td colspan="2" id="linkCell">
-					<a href="" id="resetButton" >
+					<a href='{{resetPasswordLink}}' id="resetButton" >
 						Reset Password
 					</a>
 				</td>
