--- a/server/utils/email/templates/resetPassword.handlebars
+++ b/server/utils/email/templates/resetPassword.handlebars
@@ -52,6 +52,9 @@
         background: rgb(32, 178, 170);
         text-align: center;
     }
+	 #resetButton:hover{
+		cursor: pointer;
+	 }
 
     a {
         text-decoration: none;
@@ -112,7 +115,7 @@
 			
 			<tr>
 				<td colspan="2" id="linkCell">
-					<a href='{{resetPasswordLink}}' id="resetButton" >
+					<a href="{{resetPasswordLink}}" target="_blank" id="resetButton">
 						Reset Password
 					</a>
 				</td>
